添加Open Graph Protocol 及 修正icon

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URCAR</title>
-  </head>
-  <body>
-    <div id="app" class="app d-flex flex-column justify-content-between"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/tesla_icon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>URCAR</title>
+
+  <meta name="description" content="電動車租賃第一品牌-URCAR">
+  <meta name="keywords" content="電動車租賃,特斯拉租賃,到府送車服務">
+
+  <meta name="og:title" content="URCAR">
+  <meta name="og:description" content="電動車租賃第一品牌-URCAR">
+  <meta name="og:type" content="website">
+  <meta name="og:url" content="https://sming0305.github.io/URCAR/#/">
+  <meta name="og:image" content="https://i.imgur.com/RwBuDs3.png">
+
+</head>
+
+<body>
+  <div id="app" class="app d-flex flex-column justify-content-between"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
