增加租賃及當前購物流程指引區塊

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta name="og:type" content="website">
   <meta name="og:url" content="https://sming0305.github.io/URCAR/#/">
   <meta name="og:image" content="https://i.imgur.com/RwBuDs3.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
 
